Fixing Bugs on Safari

--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 /* -------- GLOBAL -------- */
 html,
 body {
-  font-family: "Roboto", Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-family: 'Roboto', Helvetica Neue, Helvetica, Arial, sans-serif;
   position: relative;
   height: 100%;
 }
@@ -71,7 +71,7 @@ h2 {
 }
 
 #video-video {
-  background-image: url("../images/Quarry.webp");
+  background-image: url('../images/Quarry.webp');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -133,7 +133,7 @@ h2 {
       rgba(0, 0, 0, 0.1),
       rgba(0, 0, 0, 0.1)
     ),
-    url("../images/Kurdzhali.webp");
+    url('../images/Kurdzhali.webp');
 
   background-attachment: fixed;
   background-position: center;
@@ -384,19 +384,19 @@ h2 {
 }
 
 .products-desktop-collapse-img.img-1 {
-  background-image: url("../images/Composition 2.webp");
+  background-image: url('../images/Composition 2.webp');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
 .products-desktop-collapse-img.img-2 {
-  background-image: url("../images/Production\ Capacity\ 2.webp");
+  background-image: url('../images/Production\ Capacity\ 2.webp');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
 .products-desktop-collapse-img.img-3 {
-  background-image: url("../images/Delivery\ 2.webp");
+  background-image: url('../images/Delivery\ 2.webp');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -409,10 +409,26 @@ h2 {
 }
 
 /* -------- PRODUCTS MOBILE -------- */
-
-#products .accordion-body {
-  max-width: 450px;
-  margin: auto;
+@media screen and (max-width: 576px) {
+  .individual-card-container {
+    max-width: 450px;
+    margin: auto;
+  }
+}
+@media screen and (max-width: 768px) {
+  .individual-card-container {
+    max-width: 550px;
+    margin: auto;
+  }
+  #products-container-mobile .card {
+    width: 100%;
+    max-width: 100%;
+  }
+}
+.accordion-item,
+#products-container-mobile .card {
+  margin-left: 0;
+  margin-right: 0;
 }
 
 #products-container-mobile .accordion-item {
@@ -443,7 +459,7 @@ h2 {
       rgba(248, 249, 250, 0),
       rgba(248, 249, 250, 0)
     ),
-    url("../images/QandA.webp");
+    url('../images/QandA.webp');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -522,7 +538,7 @@ h2 {
       rgba(255, 255, 255, 0.35),
       rgba(255, 255, 255, 0.35)
     ),
-    url("../images/bg-border.webp");
+    url('../images/bg-border.webp');
 
   background-position: center;
   background-size: cover;
@@ -533,7 +549,7 @@ h2 {
       rgba(255, 255, 255, 0),
       rgba(255, 255, 255, 0)
     ),
-    url("../images/sofia-border.webp");
+    url('../images/sofia-border.webp');
 
   background-position: center;
   background-size: cover;
@@ -545,7 +561,7 @@ h2 {
       rgba(255, 255, 255, 0),
       rgba(255, 255, 255, 0)
     ),
-    url("../images/kurdzhali-border.webp");
+    url('../images/kurdzhali-border.webp');
 
   background-position: center;
   background-size: cover;
@@ -620,7 +636,7 @@ h2 {
 
 .map-collapse-img-sofia {
   width: 55%;
-  background-image: url("../images/Sofia\ Office.webp");
+  background-image: url('../images/Sofia\ Office.webp');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -636,7 +652,7 @@ h2 {
 .map-collapse-img-kurdzhali-1 {
   width: 100%;
 
-  background-image: url("../images/Kurdzhali\ 1.webp");
+  background-image: url('../images/Kurdzhali\ 1.webp');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -668,7 +684,7 @@ h2 {
 }
 
 .map-collapse-kurdzhali-2 .img-1 {
-  background-image: url("../images/Kurdzhali\ 2.webp");
+  background-image: url('../images/Kurdzhali\ 2.webp');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -676,7 +692,7 @@ h2 {
   bottom: 53.3%;
 }
 .map-collapse-kurdzhali-2 .img-2 {
-  background-image: url("../images/Kurdzhali\ 3.webp");
+  background-image: url('../images/Kurdzhali\ 3.webp');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
